--- a/src/app/views/small-business-loans-view/small-business-loans-view.component.html
+++ b/src/app/views/small-business-loans-view/small-business-loans-view.component.html
@@ -1,5 +1,4 @@
-<p>
-  small-business-loans-view works!
-</p>
-
 <app-small-business-loans-form></app-small-business-loans-form>
+
+<pre>{{ratesTerms|json}}</pre>
+
