--- a/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
+++ b/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
@@ -1,27 +1,110 @@
 form {
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
-    }
-    .input-icon {
+  }
+  .input-icon {
     position: relative;
-        i {
-            position: absolute;
-            display: block;
-            transform: translate(0, -50%);
-            top: 50%;
-            pointer-events: none;
-            width: 25px;
-            text-align: center;
-            font-style: normal;
-        }
-        input {
-            padding-left: 25px;
-            padding-right: 0;
-        }
+    i {
+      position: absolute;
+      display: block;
+      transform: translate(0, -50%);
+      top: 50%;
+      pointer-events: none;
+      width: 25px;
+      text-align: center;
+      font-style: normal;
     }
+    input {
+      padding-left: 25px;
+      padding-right: 0;
+    }
+  }
 }
+
+.range-slider {
+  margin:.1em 0;
+  input[type=range] {
+    -webkit-appearance: none;
+    width: 100%;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 12px;
+    cursor: pointer;
+    background: #5b666d;
+    border-radius: 6px;
+    border: 1px solid #010101;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    border: 2px solid #5b666d;
+    height: 30px;
+    width: 30px;
+    border-radius: 30px;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -9.2px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #67737b;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 12px;
+    cursor: pointer;
+        background: #5b666d;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
+  }
+  input[type=range]::-moz-range-thumb {
+    border: 2px solid #5b666d;
+    height: 30px;
+    width: 30px;
+    border-radius: 30px;
+    background: #ffffff;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 12px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #4f595f;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #5b666d;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+  }
+  input[type=range]::-ms-thumb {
+    border: 2px solid #5b666d;
+    height: 30px;
+    width: 30px;
+    border-radius: 30px;
+    background: #ffffff;
+    cursor: pointer;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #5b666d;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #67737b;
+  }
+
+}
+
+
 
 
 
