--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div>
-  <h1>
-    Welcome to {{title}}!!
-  </h1>
+  <app-header-nav></app-header-nav>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
