--- a/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
+++ b/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
@@ -49,59 +49,10 @@ form {
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -9.2px;
+    &::before {
+      content: "$"
+    }
   }
-  input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #67737b;
-  }
-  input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 12px;
-    cursor: pointer;
-        background: #5b666d;
-    border-radius: 1.3px;
-    border: 0.2px solid #010101;
-  }
-  input[type=range]::-moz-range-thumb {
-    border: 2px solid #5b666d;
-    height: 30px;
-    width: 30px;
-    border-radius: 30px;
-    background: #ffffff;
-    cursor: pointer;
-  }
-  input[type=range]::-ms-track {
-    width: 100%;
-    height: 12px;
-    cursor: pointer;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-  }
-  input[type=range]::-ms-fill-lower {
-    background: #4f595f;
-    border: 0.2px solid #010101;
-    border-radius: 2.6px;
-  }
-  input[type=range]::-ms-fill-upper {
-    background: #5b666d;
-    border: 0.2px solid #010101;
-    border-radius: 2.6px;
-  }
-  input[type=range]::-ms-thumb {
-    border: 2px solid #5b666d;
-    height: 30px;
-    width: 30px;
-    border-radius: 30px;
-    background: #ffffff;
-    cursor: pointer;
-  }
-  input[type=range]:focus::-ms-fill-lower {
-    background: #5b666d;
-  }
-  input[type=range]:focus::-ms-fill-upper {
-    background: #67737b;
-  }
-
 }
 
 
