--- a/src/app/components/header-nav/header-nav.component.html
+++ b/src/app/components/header-nav/header-nav.component.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" routerLink="small-business-loans">
         <img [src]="logoPath">
       </a>
-      <a class="navbar-brand">Small Business Lending</a>
+      <a class="navbar-brand">Small Business Loans</a>
     </div>
   </div>
 </div>
