--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -11,6 +11,10 @@
 }
 
 $font-family-prospa:  'ArialMT', san-serif;
-$brand-primary: #8bc34a !default;
 
-$link-color: $brand-primary !default;
+$brand-primary: #8bc34a !default;
+$brand-light-grey: #eceff1 !default;
+$brand-grey: #5b666d !default;
+$brand-slider-grey: #B0BEC5 !default;
+$brand-white: #FFF !default;
+$link-color: $brand-grey !default;
