--- a/src/app/views/small-business-loans-view/small-business-loans-view.component.html
+++ b/src/app/views/small-business-loans-view/small-business-loans-view.component.html
@@ -1,1 +1,7 @@
-<app-small-business-loans-form></app-small-business-loans-form>
+<div class="col-sm-12">
+  <h1>Prospa Online Loan Application</h1>
+
+  <p>Prospa is a responsible, cash flow lender, which means we’ll lend you money based on what your business can comfortably manage. We use a number of factors to assess the strength of your application, and this will determine the exact loan terms.</p>
+
+  <app-small-business-loans-form [rateTerms]="ratesTerms"></app-small-business-loans-form>
+</div>
