--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div>
   <app-header-nav></app-header-nav>
-  <router-outlet></router-outlet>
+  <div class="col-sm-11 col-sm-push-1">
+    <router-outlet></router-outlet>
+  </div>
 </div>
