--- a/src/app/components/header-nav/header-nav.component.html
+++ b/src/app/components/header-nav/header-nav.component.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
-    <div class="navbar-header">
+    <div class="navbar-header col-sm-11 col-sm-push-1">
       <a class="navbar-brand" routerLink="small-business-loans">
         <img [src]="logoPath">
       </a>
