--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -18,3 +18,5 @@ $brand-grey: #5b666d !default;
 $brand-slider-grey: #B0BEC5 !default;
 $brand-white: #FFF !default;
 $link-color: $brand-grey !default;
+
+$max-mobile-potrait: 500px;
