--- a/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
+++ b/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
@@ -166,11 +166,16 @@ p,label,h1,h2,span {
 
   .month-select-block {
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     .btn {
-      flex-grow: 0;
+      padding: 5px 5px;
+      flex-grow: 1;
       border-radius: 0;
     }
+  }
+
+  .btn-prospa {
+    width: 100%;
   }
 }
 
