--- a/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
+++ b/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
@@ -64,7 +64,11 @@ p,label,h1,h2,span {
   display: flex;
   justify-content: space-around;
   .btn {
-    flex-grow:1
+    padding: 5px;
+    flex-grow:1;
+    &:nth-last-child(-n+3) {
+      padding: 5px 1px;
+    }
   }
 }
 .amount-range-block {
@@ -168,7 +172,6 @@ p,label,h1,h2,span {
     flex-wrap: wrap;
     justify-content: center;
     .btn {
-      padding: 5px 5px;
       flex-grow: 1;
       border-radius: 0;
     }
