--- a/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
+++ b/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
@@ -64,11 +64,7 @@ p,label,h1,h2,span {
   display: flex;
   justify-content: space-around;
   .btn {
-    padding: 5px;
     flex-grow:1;
-    &:nth-last-child(-n+3) {
-      padding: 5px 1px;
-    }
   }
 }
 .amount-range-block {
@@ -172,7 +168,8 @@ p,label,h1,h2,span {
     flex-wrap: wrap;
     justify-content: center;
     .btn {
-      flex-grow: 1;
+      width: 20%;
+      flex-grow: 0;
       border-radius: 0;
     }
   }
