--- a/src/app/components/small-business-loans-form/small-business-loans-form.component.html
+++ b/src/app/components/small-business-loans-form/small-business-loans-form.component.html
@@ -64,8 +64,8 @@
               <div>per day</div>
             </li>
           </ul>
-          <p class="small">When we calculate your exact rate, we take into account a number of factors including our assessment on the strength of your business. This calculation is an estimate only. Conditions apply to all loan options and to full or partial repayments. Fees and charges also apply and are subject to change. Applications are subject to approval and full terms and conditions will be in the loan offer.</p>
-          <p class="small"><a href="">Connect your bank statements</a> for a more accurate result</p>
+          <p class="prospa-small">When we calculate your exact rate, we take into account a number of factors including our assessment on the strength of your business. This calculation is an estimate only. Conditions apply to all loan options and to full or partial repayments. Fees and charges also apply and are subject to change. Applications are subject to approval and full terms and conditions will be in the loan offer.</p>
+          <p class="prospa-small"><a href="">Connect your bank statements</a> for a more accurate result</p>
         </div>
 
         <div class="form-group" [ngClass]="{'has-error': (smallBusinessLoansForm.get('fullName').touched ||
