--- a/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
+++ b/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
@@ -11,6 +11,10 @@ p,label,h1,h2,span {
   height:40px;
 }
 
+.prospa-small {
+  font-size: 10px;
+}
+
 .sbl-block {
   max-width: 470px;
   border-radius: 2px;
@@ -53,7 +57,6 @@ p,label,h1,h2,span {
       width:50%;
       display: flex;
       flex-direction: column;text-align: center;
-      font-weight: bold;
     }
   }
   a {
