--- a/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
+++ b/src/app/components/small-business-loans-form/small-business-loans-form.component.scss
@@ -55,6 +55,7 @@ p,label,h1,h2,span {
     justify-content: space-around;
     li {
       width:50%;
+      font-weight: bold;
       display: flex;
       flex-direction: column;text-align: center;
     }
